@@ -27,6 +27,7 @@
   * this link : http://gcc.gnu.org/wiki/Visibility
   *
   * Modifications :
+  * - 26 aug 2009 : fix some undocumented macros
   * - 06 aug 2009 : handle HAVE_GETEXT from config.h
   * - 15 apr 2009 : Added GTS_* macros
   * - 18 mar 2009 : Added gettext stuff
@@ -36,6 +37,10 @@
 
 #include "../config.h" // for HAVE_GETTEXT
 
+/** \def _(STRING)
+  * Defines a translatable string if GNU gettext is available.
+  *
+  */
 #ifdef HAVE_GETTEXT
 // i18n stuff
 #  include <libintl.h>
@@ -46,14 +51,49 @@
 #  define _(STRING) STRING
 #endif // HAVE_GETTEXT
 
-// The following are gettext related macros used when filling a
-// parametered string with sprintf
+/** \def GTS_TIN
+  * Defines a tiny char array that can be used when filling a 
+  * parametered string with sprintf for translation purpose.
+  *
+  */
 #define GTS_TIN(var) char var[40]
+
+/** \def GTS_LIT
+  * Defines a little char array that can be used when filling a 
+  * parametered string with sprintf for translation purpose.
+  *
+  */
 #define GTS_LIT(var) char var[80]
+
+/** \def GTS_MID
+  * Defines a middle-lenght char array that can be used when filling a 
+  * parametered string with sprintf for translation purpose.
+  *
+  */
 #define GTS_MID(var) char var[120]
+
+/** \def GTS_BIG
+  * Defines a big char array that can be used when filling a 
+  * parametered string with sprintf for translation purpose.
+  *
+  */
 #define GTS_BIG(var) char var[200]
+
+/** \def GTS_HUG
+  * Defines a huge char array that can be used when filling a 
+  * parametered string with sprintf for translation purpose.
+  *
+  */
 #define GTS_HUG(var) char var[400]
 
+/** \def RAINBRU_LOCAL
+  * Define a macro used to specify a hidden symbol. The symbol
+  * will not be exported in the dynamic library.
+  *
+  * \def RAINBRU_EXPORT
+  * Define a macro used to specify an exported symbol.
+  *
+  */
 #ifdef _MSC_VER
   #ifdef BUILDING_DLL
     #define RAINBRU_EXPORT __declspec(dllexport)
